# nl2sql-cacheflow

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
assets/legacy/: join_rules.json  schema_config.json
docs/: architecture.md  comparison.md  experiment_findings.md  legacy_mapping.md  milestones.md
src/nl2sql_cacheflow/: __init__.py  main.py
src/nl2sql_cacheflow/api/: __init__.py  web_app.py
src/nl2sql_cacheflow/application/: query_service.py  runtime.py  workflow.py
src/nl2sql_cacheflow/config/: settings.py
src/nl2sql_cacheflow/domain/: __init__.py  logs.py  models.py  protocols.py
src/nl2sql_cacheflow/infra/: cache_store.py  generator.py  legacy_adapters.py  log_store.py  normalizer.py  retrieval.py  schema_catalog.py  sql_executor.py  stubs.py
src/nl2sql_cacheflow/services/: cache_router.py  prompt_builder.py  reuse_validator.py  unified_generation.py
static/: app.css
templates/: index.html  logs.html
tests/: test_workflow.py
