[project]
name = "nl2sql-cacheflow"
version = "0.1.0"
description = "Clean rebuild of the NL2SQL system with schema-first generation and safety-aware SQL reuse."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
